# silo

./: .gitignore  .gitleaks.toml  Cargo.toml  Dockerfile  README.md  build.rs  cleanup.sh  main_encrypted.tf.template  quickstart.sh  run_demo.sh  run_tofu_demo.sh  run_tofu_encrypted_demo.sh  silo.yaml
.github/workflows/: ci.yml  release.yml  test-oidc.yml
Formula/: silo.rb
certs/: generate_internal.sh  server.crt
certs/internal/: ca.crt  control.crt  control.csr  control.ext  denied.crt  denied.csr  gateway.crt  gateway.csr  gateway.ext  user.crt  user.csr
infra/: silo-control.service  silo-gateway.service  silo.service
proto/: silo.proto
scripts/: test_matrix.sh  verify_mtls_identity.sh  verify_oidc.sh  verify_reaper_governance.sh  verify_state_protection.sh
src/: banner.rs  bootstrap.rs  certs.rs  config.rs  lib.rs  main.rs  proto.rs  service.rs  shutdown.rs
src/api/: mod.rs
src/auth/: mod.rs  native.rs  oidc.rs
src/backend/: etcd.rs  grpc.rs  mod.rs  tests.rs
templates/: login.html
terraform_test/: main.tf
tests/complex_module/: backend.hcl  main.tf
