[package]
name = "silo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
flate2 = "1.0"
bytes = "1.0"
http = "1.0"
prometheus = "0.13"
uuid = { version = "1.0", features = ["v4"] }
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
pingora-openssl = { path = "../pingora/pingora-openssl", optional = true }
etcd-client = { version = "0.12", optional = true }

[build-dependencies]
tonic-build = "0.11"


[features]
default = ["openssl"]
etcd = ["dep:etcd-client"]
openssl = ["dep:pingora-openssl", "pingora/openssl"]

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1.0", features = ["full", "test-util"] }

[dependencies.pingora]
path = "../pingora/pingora"
features = ["lb", "proxy"]

[dependencies.pingora-core]
path = "../pingora/pingora-core"

[dependencies.pingora-load-balancing]
path = "../pingora/pingora-load-balancing"

[dependencies.pingora-proxy]
path = "../pingora/pingora-proxy"

[dependencies.pingora-http]
path = "../pingora/pingora-http"
