[package]
name = "silo"
version = "0.1.0"
edition = "2021"
description = "Secure Terraform State Gateway with mTLS, OIDC, and governance controls"
license = "MIT"
repository = "https://github.com/StanleyXie/silo"

[dependencies]
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
flate2 = "1.0"
bytes = "1.0"
http = "1.0"
prometheus = "0.13"
uuid = { version = "1.0", features = ["v4"] }
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
etcd-client = { version = "0.12", optional = true }

# Pingora 0.6.0 from crates.io
pingora = { version = "0.6", features = ["lb", "proxy", "openssl"] }
pingora-core = "0.6"
pingora-load-balancing = "0.6"
pingora-proxy = "0.6"
pingora-http = "0.6"
pingora-openssl = { version = "0.6", optional = true }

[build-dependencies]
tonic-build = "0.11"

[features]
default = ["openssl"]
etcd = ["dep:etcd-client"]
openssl = ["dep:pingora-openssl"]

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1.0", features = ["full", "test-util"] }
