[package]
name = "silo"
version = "0.3.21"
edition = "2021"
description = "Secure Terraform State Gateway with mTLS, OIDC, and governance controls"
license = "MIT"
repository = "https://github.com/StanleyXie/silo"

[[bin]]
name = "silo"
path = "src/bin/silo.rs"

[[bin]]
name = "silo-server"
path = "src/bin/silo-server.rs"

[dependencies]
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
flate2 = "1.0"
bytes = "1.0"
http = "1.0"
prometheus = "0.13"
uuid = { version = "1.0", features = ["v4"] }
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
etcd-client = { version = "0.12", optional = true }

# Pingora 0.6.0 from crates.io
pingora = { version = "0.6", features = ["lb", "proxy", "openssl"] }
pingora-core = "0.6"
pingora-load-balancing = "0.6"
pingora-proxy = "0.6"
pingora-http = "0.6"
pingora-openssl = { version = "0.6", optional = true }
rcgen = "0.14.7"
dirs = "6.0.0"
indicatif = "0.17"
console = "0.15"
bcrypt = "0.15"
askama = "0.12"
rand = "0.8"
url = "2.2"
webbrowser = "1.0"
dialoguer = "0.12.0"

[build-dependencies]
tonic-build = "0.11"

[features]
default = ["openssl"]
etcd = ["dep:etcd-client"]
openssl = ["dep:pingora-openssl"]

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1.0", features = ["full", "test-util"] }
